# bellman-gui

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  release-dev.yml
e2e/: background-pan.spec.ts  compound-drag.spec.ts  example-layout.spec.ts  inner-graph-menu.spec.ts  keyboard-pan.spec.ts  legend-persistence.spec.ts  node-edit.spec.ts  top-level-layout-persistence.spec.ts  tsconfig.json  undo-persistence.spec.ts  undo-redo.spec.ts  work-package-layout-invariants.spec.ts
e2e/support/: fixtures.ts  tauri-mock.js
eslint-rules/: require-switch-satisfies-never.mjs
packaging/: bellman-sidecar-stub.sh  bundle-portable.sh  cytoscape-compound-graph.ref  fetch-bellman-sidecar.sh  install-linux-deps.sh  prepare-compound-graph.sh  prepare-sidecar.sh  stamp-version.sh  write-latest-json.sh
scripts/: check-throws-in-diff.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/binaries/.bellman/: bellman-state.json
src-tauri/capabilities/: default.json
src-tauri/src/: bellman_cmd.rs  bellman_validate.rs  cli.rs  graph.rs  graph_layout.rs  lib.rs  main.rs  node_detail.rs  node_editor_history.rs  roadmap_edit.rs  settings.rs  undo.rs  update_state.rs
src/components/: CompoundDragHandle.tsx  CompoundOverlays.tsx  CompoundResizeHandles.tsx  CreateEdgeDialog.tsx  CreateLinkDialog.tsx  CreateNodeDialog.tsx  CreateVertexDialog.tsx  GraphContextMenu.tsx  GraphNodeContextMenu.tsx  NodeTypeLegend.tsx  (+8 more)
(+59 files in other folders)
