[package]
name = "bellman-gui"
version = "0.1.0"
description = "Desktop graph viewer for Bellman roadmaps"
authors = ["David Gillard"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "bellman_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
undo = { version = "0.52", features = ["serde"] }
base64 = "0.22"
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
